--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <div> Alt. Accuracy: <span id="aaccuracy"></span></div>
    <div> Heading <span id="headingg"></span></div>
    <div> Speed <span id="speed"></span></div>
-   <div> Timestamp: <span id="timestamp"></span><</div>
+   <div> Timestamp: <span id="timestamp"></span></div>
   </div>
  </div>
  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
